--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,10 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let page of pages" (click)="openPage(page)">
+      <button menuClose
+              ion-item
+              *ngFor="let page of pages"
+              (click)="openPage(page)">
         {{page.title}}
       </button>
     </ion-list>
