--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -157,3 +157,17 @@ $duration: 1.4s;
     transform:rotate(450deg);
   }
 }
+
+.not-connection-title {
+  font-size: 32px;
+  color: #616161;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.valid-time {
+  font-size: 18px;
+  padding-bottom: 10px;
+  margin: 0 auto;
+}
